--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.25.2
 OpenLIBS==0.1.0
+packaging==23.1
 pandas==2.0.3
+plotly==5.16.1
 python-dateutil==2.8.2
 pytz==2023.3
 scipy==1.11.2
 six==1.16.0
+tenacity==8.2.3
 tzdata==2023.3
 Werkzeug==2.3.6
 WTForms==3.0.1
