--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,32 @@
 blinker==1.6.2
 click==8.1.6
 colorama==0.4.6
+Deprecated==1.2.14
 Flask==2.3.2
+Flask-Limiter==3.5.0
 Flask-WTF==1.1.1
+importlib-resources==6.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+limits==3.6.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+mdurl==0.1.2
 numpy==1.25.2
 OpenLIBS==0.1.0
+ordered-set==4.1.0
 packaging==23.1
 pandas==2.0.3
 plotly==5.16.1
+Pygments==2.16.1
 python-dateutil==2.8.2
 pytz==2023.3
+rich==13.5.2
 scipy==1.11.2
 six==1.16.0
 tenacity==8.2.3
+typing_extensions==4.7.1
 tzdata==2023.3
 Werkzeug==2.3.6
+wrapt==1.15.0
 WTForms==3.0.1
